kubernetes/k3s-prod-a/homepage/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.10.4@sha256:916f33fad511d624859f3a7da384eb89ba181c2cce17dd6fcd8903e3652f4ee0
          startupProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: homepage-config
              mountPath: /app/config
      volumes:
        - name: homepage-config
          persistentVolumeClaim:
            claimName: homepage-config
