kubernetes/k3s-prod-a/homepage/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dash.l.47fc5c.com`)
      kind: Rule
      services:
        - name: homepage
          kind: Service
          port: 3000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: homepage-certificate
